<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.register.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.84"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.16"/>

    <TextView
        android:id="@+id/tvWelcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/welcome_back_text_view"
        android:textColor="@color/shrine_pink_900"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_text_view"
        android:textColor="@color/shrine_pink_900"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeBack"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/email_edit_text"
        app:layout_constraintEnd_toEndOf="@id/glLineRight"
        app:layout_constraintStart_toStartOf="@id/glLineLeft"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        app:hintTextColor="@color/shrine_pink_900"
        app:startIconDrawable="@drawable/ic_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/shrine_pink_900"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/password_edit_text"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/glLineRight"
        app:layout_constraintStart_toStartOf="@id/glLineLeft"
        app:layout_constraintTop_toBottomOf="@id/containerEmail"
        app:hintTextColor="@color/shrine_pink_900"
        app:startIconDrawable="@drawable/ic_lock"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/shrine_pink_900"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerPassword"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/containerEmail"
        app:layout_constraintStart_toStartOf="@id/containerEmail">

        <TextView
            android:id="@+id/tvNotAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_text_view"
            android:textColor="@color/shrine_pink_900"
            app:layout_constraintEnd_toStartOf="@id/tvSignUpHere"
            app:layout_constraintStart_toStartOf="@id/clContainer"
            app:layout_constraintTop_toTopOf="@id/clContainer"/>

        <TextView
            android:id="@+id/tvSignUpHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_here_text_view"
            android:textColor="@color/shrine_pink_100"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/clContainer"
            app:layout_constraintStart_toEndOf="@id/tvNotAccount"
            app:layout_constraintTop_toTopOf="@id/clContainer"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>